--- a/webapp/Frontend-react/server/package.json
+++ b/webapp/Frontend-react/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "nodemon": "^3.0.2"
   }
 }
