--- a/webapp/Frontend-react/server/package.json
+++ b/webapp/Frontend-react/server/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
 }
